better chromosome representation and fitness evaluation