@@ -37,25 +37,30 @@ public class EvolutionaryAlgorithm {
         Random rand = new Random();
         Chromosome offspring = new Chromosome();
 
-        double[] parent1Genes = parent1.getGenes();
-        double[] parent2Genes2 = parent2.getGenes();
-        double[] child = offspring.getGenes();
-
-        for (int i = 0; i < child.length; i++) {
-            child[i] = rand.nextBoolean() ? parent1Genes[i] : parent2Genes2[i];
+        for (int i = 0; i < Chromosome.numberOfCommands; i++) {
+            offspring.getLeftSpeeds()[i]  = rand.nextBoolean() ? parent1.getLeftSpeeds()[i]  : parent2.getLeftSpeeds()[i];
+            offspring.getRightSpeeds()[i] = rand.nextBoolean() ? parent1.getRightSpeeds()[i] : parent2.getRightSpeeds()[i];
+            offspring.getDurations()[i]   = rand.nextBoolean() ? parent1.getDurations()[i]   : parent2.getDurations()[i];
         }
         return offspring;
     }
 
-
     public static void GaussianMutation(Chromosome chromosome, double mutationRate, double mutationStrength) {
         Random rand = new Random();
-        double[] genes = chromosome.getGenes();
 
-        for (int i = 0; i < genes.length; i++) {
+        for (int i = 0; i < Chromosome.numberOfCommands; i++) {
             if (rand.nextDouble() < mutationRate) {
-                genes[i] += rand.nextGaussian() * mutationStrength;
-                genes[i] = Math.max(0.0, Math.min(1.0, genes[i]));
+                int delta = (int)(rand.nextGaussian() * mutationStrength * (Chromosome.MAX_SPEED - Chromosome.MIN_SPEED));
+                chromosome.getLeftSpeeds()[i] = Math.clamp(chromosome.getLeftSpeeds()[i] + delta, Chromosome.MIN_SPEED, Chromosome.MAX_SPEED);
+            }
+            if (rand.nextDouble() < mutationRate) {
+                int delta = (int)(rand.nextGaussian() * mutationStrength * (Chromosome.MAX_SPEED - Chromosome.MIN_SPEED));
+                chromosome.getRightSpeeds()[i] = Math.clamp(chromosome.getRightSpeeds()[i] + delta, Chromosome.MIN_SPEED, Chromosome.MAX_SPEED);
+            }
+            if (rand.nextDouble() < mutationRate) {
+                // Same idea scaled to the time range
+                int delta = (int)(rand.nextGaussian() * mutationStrength * (Chromosome.MAX_TIME - Chromosome.MIN_TIME));
+                chromosome.getDurations()[i] = Math.clamp(chromosome.getDurations()[i] + delta, Chromosome.MIN_TIME, Chromosome.MAX_TIME);
             }
         }
     }
